--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "making better translator on a special domain",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "export GOOGLE_APPLICATION_CREDENTIALS='./new-better-translator-e41564ece59b.json' && nodemon app.js",
     "heroku-postbuild": "cd client && npm install && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,6 +12,7 @@
     "type": "git",
     "url": "git+https://github.com/tkhwang/better-translator.git"
   },
+  "preinstall": "node preinstall.js",
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -20,7 +21,11 @@
   },
   "homepage": "https://github.com/tkhwang/better-translator#readme",
   "dependencies": {
+    "@google-cloud/translate": "^2.1.2",
+    "config": "^3.0.0",
     "express": "^4.16.4",
+    "helmet": "^3.15.0",
+    "morgan": "^1.9.1",
     "nodemon": "^1.18.7"
   }
 }
