--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@google-cloud/translate": "^2.1.2",
     "axios": "^0.18.0",
+    "bootstrap": "^4.1.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1"
