--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "homepage": "https://github.com/tkhwang/better-translator#readme",
   "dependencies": {
     "@google-cloud/translate": "^2.1.2",
+    "axios": "^0.18.0",
     "config": "^3.0.0",
+    "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "helmet": "^3.15.0",
     "morgan": "^1.9.1",
