--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,10 @@
     "@google-cloud/translate": "^2.1.2",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
+    "font-awesome": "^4.7.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-loading": "^2.0.3",
     "react-scripts": "2.1.1"
   },
   "scripts": {
